--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,8 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;
+
 }
 
 .header {
@@ -14,18 +15,127 @@
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  background-color:#F2F2F2;
+  display:flex;
+  position: relative;
+  align-items: center;
+}
+
+.logo {
+  width: 228;
+  height: 32px;
+  z-index: 3;
+  }
+
+.logo_place_header {
+  width: 228px;
+  height: 32px;
+  top: 30px;
+  left: 64px;
+  position: absolute;
+}
+
+.header__title {
+  display: flex;
+  justify-content: center;
+  width: 730px;
+  margin-left: 64px;
+  font-size: 102px;
+  line-height: 96px;
+  font: bold;
+}
+
+.header__subtitle {
+  position: absolute;
+  width: 388px;
+  left: 64px;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+  bottom: 30px;
+  z-index: 3;
+}
+
+.header__link {
+  text-decoration: none;
+  color: #2F80ED;
+  }
+
+.header__main-illustration {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 765px;
+  height: 608px;
+  z-index: 2;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
+  position: absolute;
   height: 568px;
   width: 568px;
+  background-color:#2f80ed;
+  top: 64px;
+  right: 0;
+  position: absolute;
+  z-index: 1;
 }
+
+.content {
+position: relative;
+}
+
+.description {
+display: flex;
+justify-content: center;
+}
+
+.two-columns {
+display: flex;
+width: 80%;
+margin-top: 100px;
+margin-bottom: 100px;
+justify-content: space-between;
+}
+
+.two-columns__brief {
+min-width: 175px;
+margin: 0;
+font-size: 18px;
+line-height: 1.2;
+font-weight: normal;
+color: #2F80ED;
+}
+
+.two-columns__main-text {
+display: flex;
+flex-direction: column;
+min-width: 784px;
+width: 80%;
+}
+
+.two-columns__paragraph {
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+margin-top: 0;
+margin-bottom: 30px;
+line-height: 34px;
+font-size: 24px;
+font-weight: normal;
+}
+
+.two-columns__span-accent {
+font-weight: bold;
+}
+
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
-  width: 200px;
+width: 200px;
   color: white;
-  margin-right: 0;
-  margin-top: 80px;
+  /* margin-right: 0; */
+margin-top: 80px;
 }
+
