--- a/styles/style.css
+++ b/styles/style.css
@@ -58,7 +58,7 @@
 
 .header__link {
   text-decoration: none;
-  color: #2F80ED;
+  color: #2f80ed;
   }
 
 .header__main-illustration {
@@ -105,7 +105,7 @@ margin: 0;
 font-size: 18px;
 line-height: 1.2;
 font-weight: normal;
-color: #2F80ED;
+color: #2f80ed;
 }
 
 .two-columns__main-text {
@@ -126,10 +126,154 @@ font-size: 24px;
 font-weight: normal;
 }
 
-.two-columns__span-accent {
-font-weight: bold;
+two-columns__paragraph_sec {
+  white-space: nowrap;
 }
 
+.two-columns__span-accent {
+font-weight: bold;
+
+}
+
+.digits {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
+  
+.section-title {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  margin-bottom: 20px;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  }
+  
+.section-subtitle {
+  display: flex;
+  justify-content: center;
+  margin-top: 0;
+  margin-bottom: 0;
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  }
+  
+.table {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 1100px;
+  margin-bottom: 100px;
+  }
+  
+.table__cell {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  margin-top: 60px;
+  }
+  
+.table__heading {
+  margin-top: 0;
+  margin-bottom: 20px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  }
+  
+.table__text {
+  margin-top: 0;
+  margin-bottom: 20px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  }
+
+.feynman {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; 
+  height: 890px;
+  background-color: #f2f2f2;
+  position: relative;
+  }
+  
+.feynman__title {
+    margin: 100px auto 70px auto; 
+    line-height: 1.15;
+    font-size: 120px;
+    font-weight: bold;
+    text-align: center;
+    z-index: 3;
+    white-space: wrap;
+    width: 100%;
+    max-width: 648px;
+  }
+  
+.feynman__subtitle {
+    display: inline-flex; 
+    align-items: center; 
+    justify-content: center;
+    line-height: 51px;
+    font-size: 36px;
+    font-weight: normal;
+    text-align: center;
+    z-index: 3;
+    margin: 0 auto; 
+  }
+  
+.feynman__link {
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-decoration: none;
+  color: #2f80ed;
+  position: absolute;
+  z-index: 2;
+  }
+  
+
+.feynman__pic {
+  position: absolute;
+  width: 867px;
+  height: 637px;
+  margin-bottom: 0;
+  margin-left: 0;
+  z-index: 1;
+  bottom: 0;
+  left: 0;
+  }
+
+.kaufman {
+display: flex;
+position: relative;
+overflow: hidden;
+flex-direction: column;
+background-color: #1f1f1f;
+z-index: -2;
+}
+
+.section-title_theme_dark {
+margin: 90px auto 20px auto;
+color: white;
+}
+
+.section-subtitle_theme_dark {
+margin: 0 auto;
+color: white;
+}
+
+.table_theme_dark {
+margin: 0 auto 80px auto;
+}
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
@@ -138,4 +282,24 @@ width: 200px;
   /* margin-right: 0; */
 margin-top: 80px;
 }
+
+.table__heading_theme_dark {
+margin-top: 0;
+margin-bottom: 20px;
+}
+
+.table__text_theme_dark {
+margin-top: 0;
+margin-bottom: 0;
+}
+
+.kaufman__triangle {
+position: absolute;
+width: 877px;
+height: 877px;
+right: -210px;
+top: 0;
+z-index: -1;
+}
+
 
