--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,7 @@
 .header__link {
   text-decoration: none;
   color: #2f80ed;
-  }
+}
 
 .header__main-illustration {
   position: absolute;
@@ -139,7 +139,7 @@ font-weight: bold;
   display: flex;
   flex-direction: column;
   align-items: center;
-  }
+}
   
 .section-title {
   display: flex;
@@ -150,7 +150,7 @@ font-weight: bold;
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
-  }
+}
   
 .section-subtitle {
   display: flex;
@@ -161,7 +161,7 @@ font-weight: bold;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  }
+}
   
 .table {
   display: flex;
@@ -170,14 +170,14 @@ font-weight: bold;
   flex-wrap: wrap;
   width: 1100px;
   margin-bottom: 100px;
-  }
+}
   
 .table__cell {
   display: flex;
   flex-direction: column;
   width: 250px;
   margin-top: 60px;
-  }
+}
   
 .table__heading {
   margin-top: 0;
@@ -185,7 +185,7 @@ font-weight: bold;
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
-  }
+}
   
 .table__text {
   margin-top: 0;
@@ -193,7 +193,7 @@ font-weight: bold;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  }
+}
 
 .feynman {
   display: flex;
@@ -202,7 +202,7 @@ font-weight: bold;
   height: 890px;
   background-color: #f2f2f2;
   position: relative;
-  }
+}
   
 .feynman__title {
     margin: 100px auto 70px auto; 
@@ -214,7 +214,7 @@ font-weight: bold;
     white-space: wrap;
     width: 100%;
     max-width: 648px;
-  }
+}
   
 .feynman__subtitle {
     display: inline-flex; 
@@ -226,7 +226,7 @@ font-weight: bold;
     text-align: center;
     z-index: 3;
     margin: 0 auto; 
-  }
+}
   
 .feynman__link {
   top: 50%;
@@ -238,7 +238,7 @@ font-weight: bold;
   color: #2f80ed;
   position: absolute;
   z-index: 2;
-  }
+}
   
 
 .feynman__pic {
@@ -250,7 +250,7 @@ font-weight: bold;
   z-index: 1;
   bottom: 0;
   left: 0;
-  }
+}
 
 .kaufman {
 display: flex;
@@ -302,4 +302,84 @@ top: 0;
 z-index: -1;
 }
 
+.footer {
+  min-height: 350px;
+  display: flex;
+  background-color: #1f1f1f;
+  justify-content: center;
+}
 
+.footer__columns {
+  display: flex;
+  width: 90%;
+  margin-top: 60px;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+
+.footer__column {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column_content_copyrigh {
+  flex-basis: 711px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo_place_footer {
+  top: 0;
+  left: 0;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  padding-right: 10px;
+}
+
+.footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  padding: 18px 0 18px 0;
+  margin: 0;
+  color: white;
+}
+
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  margin-top: 0;
+  color: white;
+}
+
+.footer__column-links {  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 16px;
+  list-style-type: none;
+}
+
+.footer__column-link {
+  justify-content: space-between;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  margin-bottom: 16px;
+  margin-top: 0;
+  text-decoration: none;
+  color: white;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  padding-right: 10px;
+}
