--- a/styles/style.css
+++ b/styles/style.css
@@ -1,385 +1,360 @@
 .page {
-  min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
-  max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
-  margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', 'Arial', sans-serif;
-
-}
-
-.header {
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
-  /* выше установили ограничения для секции */
-  background-color:#F2F2F2;
-  display:flex;
-  position: relative;
-  align-items: center;
-}
-
-.logo {
-  width: 228;
-  height: 32px;
-  z-index: 3;
+  min-width : 1100px;
+  max-width : 1600px;
+  margin : 0 auto;
+  font-family : "Helvetica Neue", "Arial", sans-serif;
   }
 
-.logo_place_header {
-  width: 228px;
-  height: 32px;
-  top: 30px;
-  left: 64px;
-  position: absolute;
-}
+  .header {
+  height : 100vh;
+  min-height : 600px;
+  max-height : 756px;
+  background-color : #f2f2f2;
+  display : flex;
+  position : relative;
+  align-items : center;
+  }
 
-.header__title {
-  display: flex;
-  justify-content: center;
-  width: 730px;
-  margin-left: 64px;
-  font-size: 102px;
-  line-height: 96px;
-  font: bold;
-}
+  .logo {
+  height : 32px;
+  z-index : 3;
+  }
 
-.header__subtitle {
-  position: absolute;
-  width: 388px;
-  left: 64px;
-  font-size: 18px;
-  line-height: 25px;
-  font-weight: normal;
-  bottom: 30px;
-  z-index: 3;
-}
+  .logo_place_header {
+  width : 228px;
+  height : 32px;
+  top : 30px;
+  left : 64px;
+  position : absolute;
+  }
 
-.header__link {
-  text-decoration: none;
-  color: #2f80ed;
-}
+  .header__title {
+  display : flex;
+  justify-content : center;
+  width : 730px;
+  margin-left : 64px;
+  font-size : 102px;
+  line-height : 96px;
+  font : bold;
+  }
 
-.header__main-illustration {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 765px;
-  height: 608px;
-  z-index: 2;
-}
+  .header__subtitle {
+  position : absolute;
+  width : 388px;
+  left : 64px;
+  font-size : 18px;
+  line-height : 25px;
+  font-weight : normal;
+  bottom : 30px;
+  z-index : 3;
+  }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  position: absolute;
-  height: 568px;
-  width: 568px;
-  background-color:#2f80ed;
-  top: 64px;
-  right: 0;
-  position: absolute;
-  z-index: 1;
-}
+  .header__link {
+  text-decoration : none;
+  color : #2f80ed;
+  }
 
-.content {
-position: relative;
-}
+  .header__main-illustration {
+  position : absolute;
+  right : 0;
+  bottom : 0;
+  width : 765px;
+  height : 608px;
+  z-index : 2;
+  }
 
-.description {
-display: flex;
-justify-content: center;
-}
+  .header__square-pic {
+  position : absolute;
+  height : 568px;
+  width : 568px;
+  background-color : #2f80ed;
+  top : 64px;
+  right : 0;
+  position : absolute;
+  z-index : 1;
+  }
 
-.two-columns {
-display: flex;
-width: 80%;
-margin-top: 100px;
-margin-bottom: 100px;
-justify-content: space-between;
-}
+  .content {
+  position : relative;
+  }
 
-.two-columns__brief {
-min-width: 175px;
-margin: 0;
-font-size: 18px;
-line-height: 1.2;
-font-weight: normal;
-color: #2f80ed;
-}
+  .description {
+  display : flex;
+  justify-content : center;
+  }
 
-.two-columns__main-text {
-display: flex;
-flex-direction: column;
-min-width: 784px;
-width: 80%;
-}
+  .two-columns {
+  display : flex;
+  width : 80%;
+  margin-top : 100px;
+  margin-bottom : 100px;
+  justify-content : space-between;
+  }
 
-.two-columns__paragraph {
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-margin-top: 0;
-margin-bottom: 30px;
-line-height: 34px;
-font-size: 24px;
-font-weight: normal;
-}
+  .two-columns__brief {
+  min-width : 175px;
+  margin : 0;
+  font-size : 18px;
+  line-height : 1.2;
+  font-weight : normal;
+  color : #2f80ed;
+  }
 
-two-columns__paragraph_sec {
-  white-space: nowrap;
-}
+  .two-columns__main-text {
+  display : flex;
+  flex-direction : column;
+  min-width : 784px;
+  width : 80%;
+  }
 
-.two-columns__span-accent {
-font-weight: bold;
+  .two-columns__paragraph {
+  display : flex;
+  flex-direction : column;
+  justify-content : space-between;
+  margin-top : 0;
+  margin-bottom : 30px;
+  line-height : 34px;
+  font-size : 24px;
+  font-weight : normal;
+  }
 
-}
+  .two-columns__span-accent {
+  font-weight : bold;
+  }
 
-.digits {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+  .digits {
+  display : flex;
+  flex-direction : column;
+  align-items : center;
+  }
+
+  .section-title {
+  display : flex;
+  justify-content : center;
+  margin-top : 100px;
+  margin-bottom : 20px;
+  width : 60%;
+  line-height : 1.15;
+  font-size : 60px;
+  font-weight : bold;
+  }
+
+  .section-subtitle {
+  display : flex;
+  justify-content : center;
+  margin-top : 0;
+  margin-bottom : 0;
+  width : 60%;
+  line-height : 34px;
+  font-size : 24px;
+  font-weight : normal;
+  }
+
+  .table {
+  display : flex;
+  flex-direction : row;
+  justify-content : space-between;
+  flex-wrap : wrap;
+  width : 1100px;
+  margin-bottom : 100px;
+  }
+
+  .table__cell {
+  display : flex;
+  flex-direction : column;
+  width : 250px;
+  margin-top : 60px;
+  }
+
+  .table__heading {
+  margin-top : 0;
+  margin-bottom : 20px;
+  line-height : 1.15;
+  font-size : 24px;
+  font-weight : bold;
+  }
+
+  .table__text {
+  margin-top : 0;
+  margin-bottom : 20px;
+  line-height : 1.2;
+  font-size : 18px;
+  font-weight : normal;
+  }
+
+  .feynman {
+  display : flex;
+  flex-direction : column;
+  justify-content : flex-start;
+  height : 890px;
+  background-color : #f2f2f2;
+  position : relative;
+  }
   
-.section-title {
-  display: flex;
-  justify-content: center;
-  margin-top: 100px;
-  margin-bottom: 20px;
-  width: 60%;
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: bold;
-}
+  .feynman__title {
+  margin : 100px auto 70px auto;
+  line-height : 1.15;
+  font-size : 120px;
+  font-weight : bold;
+  text-align : center;
+  z-index : 3;
+  white-space : wrap;
+  width : 100%;
+  max-width : 648px;
+  }
+
+  .feynman__subtitle {
+  display : inline-flex;
+  align-items : center;
+  justify-content : center;
+  line-height : 51px;
+  font-size : 36px;
+  font-weight : normal;
+  text-align : center;
+  z-index : 3;
+  margin : 0 auto;
+  }
+
+  .feynman__link {
+  top : 50%;
+  right : 48px;
+  line-height : 51px;
+  font-size : 36px;
+  font-weight : normal;
+  text-decoration : none;
+  color : #2f80ed;
+  position : absolute;
+  z-index : 2;
+  }
+
+  .feynman__pic {
+  position : absolute;
+  width : 867px;
+  height : 637px;
+  margin-bottom : 0;
+  margin-left : 0;
+  z-index : 1;
+  bottom : 0;
+  left : 0;
+  }
+
+  .kaufman {
+  display : flex;
+  position : relative;
+  overflow : hidden;
+  flex-direction : column;
+  background-color : #1f1f1f;
+  z-index : -2;
+  }
+
+  .section-title_theme_dark {
+  margin : 90px auto 20px auto;
+  color : white;
+  }
+
+  .section-subtitle_theme_dark {
+  margin : 0 auto;
+  color : white;
+  }
+
+  .table_theme_dark {
+  margin : 0 auto 80px auto;
+  }
+
+  .table__cell_theme_dark {
+  width : 200px;
+  color : white;
+  margin-top : 80px;
+  }
+
+  .table__heading_theme_dark {
+  margin-top : 0;
+  margin-bottom : 20px;
+  }
+
+  .table__text_theme_dark {
+  margin-top : 0;
+  margin-bottom : 0;
+  }
+
+  .kaufman__triangle {
+  position : absolute;
+  width : 877px;
+  height : 877px;
+  right : -210px;
+  top : 0;
+  z-index : -1;
+  }
+
+  .footer {
+  min-height : 350px;
+  display : flex;
+  background-color : #1f1f1f;
+  justify-content : center;
+  }
+
+  .footer__columns {
+  display : flex;
+  position : relative;
+  width : 90%;
+  margin-top : 60px;
+  justify-content : space-between;
+  margin-bottom : 40px;
+  }
+
+  .footer__column_content_copyrigh {
+  position : relative;
+  flex-basis : 711px;
+  }
+
+  .logo_place_footer {
+  top : 0;
+  left : 0;
+  }
+
+  .footer__author {
+  font-size : 18px;
+  line-height : 25px;
+  margin : 18px 0;
+  font-weight : normal;
+  position : absolute;
+  bottom : 0;
+  color : #f2f2f2;
+  }
+
+  .footer__column-heading {
+  line-height : 30px;
+  font-size : 18px;
+  font-weight : 600;
+  margin-bottom : 20px;
+  margin-top : 0;
+  color : white;
+  }
+
+  .footer__column-links {
+  display : flex;
+  flex-direction : column;
+  justify-content : space-between;
+  margin : 0;
+  padding : 0;
+  margin-bottom : 16px;
+  list-style : none;
+  }
+
+  .footer__column-link {
+  justify-content : space-between;
+  line-height : 30px;
+  font-size : 18px;
+  font-weight : normal;
+  margin-bottom : 16px;
+  margin-top : 0;
+  text-decoration : none;
+  color : white;
+  }
   
-.section-subtitle {
-  display: flex;
-  justify-content: center;
-  margin-top: 0;
-  margin-bottom: 0;
-  width: 60%;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
-}
-  
-.table {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  width: 1100px;
-  margin-bottom: 100px;
-}
-  
-.table__cell {
-  display: flex;
-  flex-direction: column;
-  width: 250px;
-  margin-top: 60px;
-}
-  
-.table__heading {
-  margin-top: 0;
-  margin-bottom: 20px;
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: bold;
-}
-  
-.table__text {
-  margin-top: 0;
-  margin-bottom: 20px;
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
-}
-
-.feynman {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start; 
-  height: 890px;
-  background-color: #f2f2f2;
-  position: relative;
-}
-  
-.feynman__title {
-    margin: 100px auto 70px auto; 
-    line-height: 1.15;
-    font-size: 120px;
-    font-weight: bold;
-    text-align: center;
-    z-index: 3;
-    white-space: wrap;
-    width: 100%;
-    max-width: 648px;
-}
-  
-.feynman__subtitle {
-    display: inline-flex; 
-    align-items: center; 
-    justify-content: center;
-    line-height: 51px;
-    font-size: 36px;
-    font-weight: normal;
-    text-align: center;
-    z-index: 3;
-    margin: 0 auto; 
-}
-  
-.feynman__link {
-  top: 50%;
-  right: 48px;
-  line-height: 51px;
-  font-size: 36px;
-  font-weight: normal;
-  text-decoration: none;
-  color: #2f80ed;
-  position: absolute;
-  z-index: 2;
-}
-  
-
-.feynman__pic {
-  position: absolute;
-  width: 867px;
-  height: 637px;
-  margin-bottom: 0;
-  margin-left: 0;
-  z-index: 1;
-  bottom: 0;
-  left: 0;
-}
-
-.kaufman {
-display: flex;
-position: relative;
-overflow: hidden;
-flex-direction: column;
-background-color: #1f1f1f;
-z-index: -2;
-}
-
-.section-title_theme_dark {
-margin: 90px auto 20px auto;
-color: white;
-}
-
-.section-subtitle_theme_dark {
-margin: 0 auto;
-color: white;
-}
-
-.table_theme_dark {
-margin: 0 auto 80px auto;
-}
-
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-width: 200px;
-  color: white;
-  /* margin-right: 0; */
-margin-top: 80px;
-}
-
-.table__heading_theme_dark {
-margin-top: 0;
-margin-bottom: 20px;
-}
-
-.table__text_theme_dark {
-margin-top: 0;
-margin-bottom: 0;
-}
-
-.kaufman__triangle {
-position: absolute;
-width: 877px;
-height: 877px;
-right: -210px;
-top: 0;
-z-index: -1;
-}
-
-.footer {
-  min-height: 350px;
-  display: flex;
-  background-color: #1f1f1f;
-  justify-content: center;
-}
-
-.footer__columns {
-  display: flex;
-  width: 90%;
-  margin-top: 60px;
-  justify-content: space-between;
-  margin-bottom: 40px;
-}
-
-.footer__column {
-  display: flex;
-  flex-direction: column;
-}
-
-.footer__column_content_copyrigh {
-  flex-basis: 711px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.logo_place_footer {
-  top: 0;
-  left: 0;
-}
-
-.footer__social-icon {
-  width: 16px;
-  height: 16px;
-  padding-right: 10px;
-}
-
-.footer__author {
-  line-height: 25px;
-  font-size: 18px;
-  font-weight: normal;
-  padding: 18px 0 18px 0;
-  margin: 0;
-  color: white;
-}
-
-.footer__column-heading {
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: 600;
-  margin-bottom: 20px;
-  margin-top: 0;
-  color: white;
-}
-
-.footer__column-links {  
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 16px;
-  list-style-type: none;
-}
-
-.footer__column-link {
-  justify-content: space-between;
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: normal;
-  margin-bottom: 16px;
-  margin-top: 0;
-  text-decoration: none;
-  color: white;
-}
-
-.footer__social-icon {
-  width: 16px;
-  height: 16px;
-  padding-right: 10px;
-}
+  .footer__social-icon {
+  width : 16px;
+  height : 16px;
+  padding-right : 10px;
+  color : white;
+  }
