--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -1,10 +1,12 @@
 .header__subtitle {
-    position : absolute;
-    width : 388px;
-    left : 64px;
-    font-size : 18px;
-    line-height : 25px;
-    font-weight : normal;
-    bottom : 30px;
-    z-index : 3;
-    }
+    width: 388px;
+    position: absolute;
+    bottom: 30px;
+    left: 64px;
+    z-index: 2;
+    line-height: 25px;
+    font-size: 18px;
+    font-weight: normal;
+    color: #000000;
+    margin: 0 auto;
+  }
