--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,8 +1,9 @@
 .header__title {
-    width: 730px;
+    max-width: 730px;
     line-height: 96px;
     font-size: 102px;
     font-weight: bold;
     z-index: 3;
     color: #000000;
+    margin: 0 0 0 64px;
   }
