--- a/blocks/oakley/oakley.css
+++ b/blocks/oakley/oakley.css
@@ -1,4 +1,6 @@
 .oakley {
-    background-color: #f2f2f2;
-    padding-top: 160px;
+  padding-top: 160px;
+  background-color: #f2f2f2;
+  display : flex;
+  justify-content : center;
   }
