--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -1,10 +1,8 @@
 .section-subtitle {
-    display : flex;
-    justify-content : center;
-    margin-top : 0;
-    margin-bottom : 0;
+    margin : 20px auto 0;
     width : 60%;
     line-height : 34px;
     font-size : 24px;
     font-weight : normal;
+    text-align: center;
     }
