--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -1,10 +1,10 @@
 .section-title {
-    display : flex;
-    justify-content : center;
     margin-top : 100px;
     margin-bottom : 20px;
+    margin: 0 auto;
     width : 60%;
     line-height : 1.15;
     font-size : 60px;
     font-weight : bold;
+    text-align: center;
     }
