--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,8 +1,3 @@
 .video {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin: 0 auto;
-    justify-content: center;
-    margin-bottom: -50px;
+  padding-top: 100px;
   }
